fix: :bug: FIX CSS Login Page
Corrige bug de css na palavra 'ou' da caixa de login

--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -1,11 +1,10 @@
 .login {
   width: 100%;
-  min-height: calc(100vh - 22px);
+  min-height: 100vh;
   background: url("../src/assets/img/bg-login.jpg") center;
   display: grid;
   justify-content: center;
   align-items: center;
-  padding-bottom: 40px;
 }
 
 .login__logo {
@@ -27,18 +26,27 @@
 }
 
 .login__form__line {
-  display: grid;
-  grid-auto-flow: column;
-  gap: 10px;
-  width: 100%;
   text-align: center;
-  border-bottom: 1px solid #000;
-  line-height: 0.1em;
-  margin: 10px 0 20px;
-  background: rgba(247, 250, 245, 0.9);
+  text-transform: lowercase;
 }
 
-/* .login__form__line > span {
-  background: rgba(247, 250, 245, 0.9);
-  padding: 0 10px;
-} */
+.login__divider {
+  display: flex;
+  align-items: center;
+  text-align: center;
+}
+
+.login__divider::before,
+.login__divider::after {
+  content: "";
+  flex: 1;
+  border-bottom: 1px solid #989898;
+}
+
+.login__divider:not(:empty)::before {
+  margin-right: 0.5em;
+}
+
+.login__divider:not(:empty)::after {
+  margin-left: 0.5em;
+}
