--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -87,23 +87,38 @@ body {
   width: 57px;
 }
 .menu__button__label {
+  color: rgb(26, 26, 26);
+  font-weight: 800;
+  font-size: 20px;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
   text-align: left;
   padding: 10px;
 }
-.menu__button__label :first-child {
-  font-weight: 700;
+
+.menu__button__label .link  :first-child {
+  color: rgb(22, 22, 22);
+  font-weight: 800;
   font-size: 20px;
   line-height: 29px;
   text-transform: uppercase;
+  text-decoration: none;
+  font-style: none;
+  font-style: normal;
 }
+
+
 .menu__button__label :last-child {
   font-weight: 300;
   font-size: 16px;
   line-height: 24px;
   color: rgba(129, 129, 129, 1);
+}
+
+.menu__button__label  :first-child:hover {
+color:#5c9249;
+font-weight: 900;
 }
 
 .footer {
