--- a/src/pages/Footer/Footer.css
+++ b/src/pages/Footer/Footer.css
@@ -1,5 +1,19 @@
 .footer {
   background: var(--primary-color);
+  position: absolute;
+  bottom: 0;
+  margin: 0 auto;
   height: 22px;
-  width: 100%;
+  width: 100%; 
 }
+
+@media (max-width: 720px) {
+
+      .footer {
+        height:50px;
+        width: 650px;
+      }
+  
+      
+  }
+  
