--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -81,12 +81,19 @@
   text-align: left;
   padding: 10px;
 }
-.menu__button__label :first-child {
+.menu__button__label .link :first-child {
+  color: black;
   font-weight: 700;
   font-size: 20px;
   line-height: 29px;
   text-transform: uppercase;
 }
+
+.menu__button__label .link :first-child:hover {
+  color:#5c9249;
+  font-weight: 900;
+  }
+
 .menu__button__label :last-child {
   font-weight: 300;
   font-size: 16px;
